--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
       <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <version>6.1.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
