--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
+      <version>8.2.0</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -80,8 +81,21 @@
       <version>8.0.1.Final</version>
     </dependency>
 
-  </dependencies>
+    <!-- Swagger 2 para a documentação da API -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.9.2</version>
+    </dependency>
 
+    <!-- Swagger UI para a interface de usuário Swagger -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+
+  </dependencies>
 
   <build>
     <plugins>
